adding functionality to save and view saved reports.  Moved the functionality of util.ReportGenerator into om.Report and removed the former class.
added a few more methods to ModuleEntity.  need to go through this and
make sure it is in line with ScarabModule.


Issue number:
Obtained from:
Submitted by:
Reviewed by:
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -205,6 +205,18 @@
  #indexedRows($velocityCount)
 #end
 
+
 #macro ( datatitle $title)
 <h3>$title</h3>
+#end
+
+
+#macro ( selected $boolean )
+#if ($boolean) selected="selected"#end
+#end
+
+
+#macro ( option $optionModel )
+<option #selected($optionModel.isSelected()) 
+    value="$optionModel.Value">$optionModel.Name</option>
 #end
