--- a/src/templates/screens/reports/Step1.vm
+++ b/src/templates/screens/reports/Step1.vm
@@ -12,10 +12,23 @@
    </tr>
    </table>
   </div>
-<h3>Summary information</h3>
-<h4>Considering saving this report?</h4>
-<p>If so,  enter the following information (it can be edited later).</p>
+
 <form method="get" action="$action">
+
+#set ($reports = $scarabR.CurrentModule.getSavedReports($data.User))
+#if ($reports.size() > 0)
+<h3>Saved reports</h3>
+<select name="report_id">
+    #foreach ( $report in $reports )
+        <option value="$report.ReportId">$report.Name</option>
+    #end
+</select>
+<input type="submit" value="Run" name="eventSubmit_doRunstoredreport"/>
+<input type="submit" value="Edit" name="eventSubmit_doEditstoredreport"/>
+#end
+
+<h3>Summary information</h3>
+<p><strong>Considering saving this report?</strong> If so,  enter the following information (it can be edited later).</p>
 <div class="axial">
  <table border="0" cellspacing="2" cellpadding="3">
   <tr>
