--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -165,10 +165,10 @@
 
 #macro (queryTypeSelectBox $query)
   #set ($queryGroup = $intake.Query.mapTo($query))
-  <select name="$queryGroup.TypeId.Key">
-  #foreach ($type in $query.getAllQueryTypes())
-    <option value = "$type.QueryTypeId" #if( $type.QueryTypeId.equals("$query.TypeId")) selected="selected" #end>
-    $type.Name
+  <select name="$queryGroup.ScopeId.Key">
+  #foreach ($scope in $scarabR.getScopes())
+    <option value = "$scope.ScopeId" #if( $scope.ScopeId.equals("$query.ScopeId")) selected="selected" #end>
+    $scope.Name
     </option>
   #end
   </select>
