--- a/src/html/style/main.css
+++ b/src/html/style/main.css
@@ -1,5 +1,5 @@
 /* SourceCast v1.2 STYLE SHEET */
-@import url(/scarab/style/ns4_toxins.css);
+@import url(ns4_toxins.css);
 
 
 /* SourceCast - styles start here */
@@ -54,7 +54,7 @@ a:active, a:hover {
 	background: #fff;
 	}
 .datatablechild th {
-	background-color: #c3c3c3;
+	background: #c3c3c3;
 	color: #000;
 	font-weight: normal
 	}
@@ -143,7 +143,7 @@ body #banner #login a {
 	margin: 0;
 	}
 .tabs th {
-	color: black;
+	color: white;
 	background-color: #999;
 	padding-left: 7px;
 	padding-right: 7px;
@@ -156,15 +156,54 @@ body #banner #login a {
 /* SourceCast - styles end here */
 
 /* Scarab/App - styles start here */
-
+#topmodule {
+	}
 #topmodule td {
 	background: #efefef;
 	padding-left: 12px;
 	vertical-align:	middle;
 	}	
+.functnbar {
+	vertical-align: middle;
+	padding: 3px;
+	margin-top: .5em;
+	}
+.functnbar th, .functnbar td {
+	color: #fff;
+	padding-left: 2px;
+	padding-right: 2px;
+	}
+.functnbar2 {
+	vertical-align: middle;
+	padding: 3px;
+	}
+.functnbar2 th, .functnbar2 td {
+	color: white;
+	padding-left: 2px;
+	padding-right: 2px;
+	}
+.tabs th {
+	padding-left: 7px;
+	padding-right: 7px;
+	}
+.tabs td {
+	padding-left: 7px;
+	padding-right: 7px;
+	}
 .datatablechild th {
 	background: #c3c3c3;
 	color: #000;
 	font-weight: bold;
+	}
+	
+.dividers, .dividers table, .dividers td {
+	background: #99ccff;
+	vertical-align: middle;
+	}
+
+.axial th {
+	background: #efefef;
+	text-align: right;
+	color: black;
 	}
 /* Scarab/App - styles end here */
