--- a/src/templates/screens/admin/ArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/ArtifactTypeEdit.vm
@@ -1,126 +1,151 @@
 $page.setTitle("Attribute Editor")
 
-#set ( $module = $scarabR.CurrentModule )
-#set ( $moduleGroup = $intake.Module.mapTo($module) )
+#set ($module = $scarabR.CurrentModule)
+#set ($moduleGroup = $intake.Module.mapTo($module))
 #set ($issueType = $scarabR.IssueType)
 #set ($issueTypeId = $data.Parameters.getString("issueTypeId"))
-#set ( $issueTypeGroup = $intake.IssueType.mapTo($issueType) )
+#set ($issueTypeGroup = $intake.IssueType.mapTo($issueType))
 
 <div class="app" id="div2-1-4-0">
 
- <h2>Customize/create artifact type (2.1.4.0)</h2>
+<h2>Customize/create artifact type</h2>
+
 <form method="get" action="$link.setPage("admin,ArtifactTypeEdit.vm")">
-      <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
-      <input type="hidden" name="nextTemplate" value="admin,ArtifactTypeEdit.vm" />
-     #if ($issueTypeId)
-      <input type="hidden" name="issueTypeId" value="$issueTypeId" />
-     #end
+<input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
+<input type="hidden" name="nextTemplate" value="admin,ArtifactTypeEdit.vm" />
+#if ($issueTypeId)
+<input type="hidden" name="issueTypeId" value="$issueTypeId" />
+#end
+
 <div class="functnbar">
-<table cellpadding="4" cellspacing="0" border="1">
-<tr>
-<td class="firstchild"><div>
-Screen options
-</div>
-<input type="submit" value="Submit changes" name="eventSubmit_doModifyissuetype" />&#160;<input type="submit" value="Cancel" />
-</td>
-<td><div>
-Attribute group options
-</div>
-<input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;<input type="submit" value="Copy" />&#160;<input type="submit" value="Delete" name="eventSubmit_doDeletegroup" />&#160;<input type="submit" value="Resort" />
-</td>
-</tr></table>
+  <table cellpadding="0" cellspacing="0" border="0">
+  <tr>
+    <td><strong>Screen options:</strong></td>
+    <td rowspan="2"><img src="$data.Request.ContextPath/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+    <td><strong>Atribute group options:</strong></td>
+    <td rowspan="2"><img src="$data.Request.ContextPath/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+  </tr>
+  <tr>
+    <td>
+      <input type="submit" value="Save" name="eventSubmit_doModifyissuetype" />&#160;
+      <!-- FIXME: <input type="submit" value="Cancel"  /> -->
+    </td>
+    <td>
+      <input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;
+      <!-- FIXME: <input type="submit" value="Copy" />&#160; -->
+      <input type="submit" value="Delete" name="eventSubmit_doDeletegroup" />&#160;
+      <!-- FIXME: <input type="submit" value="Resort" /> -->
+    </td>
+  </tr>
+  </table>
 </div>
 
-        <h3>Artifact type details</h3>
-        <div class="axial">
-            <table border="0" cellspacing="2" cellpadding="3">
-            <tr>
-            <th>Artifact type name</th>
-            <td><input type="text" size="25" name="$issueTypeGroup.Name.Key" value="$!issueTypeGroup.Name.Value" /></td>
-            </tr>
-            <tr>
-            <th>Artifact type descr</th>
-            <td><textarea rows="4" cols="40" name="$issueTypeGroup.Description.Key">$!issueTypeGroup.Description.Value</textarea></td>
-            </tr>
-            </table>
-        </div>
-        <h3>Artifact instance "history" and "Comments" display options</h3>
-        <p><input type="checkbox" checked="checked" />&nbsp;Show&nbsp;
-        <select class="select">
-        <option>5</option>
-        <option>10</option>
-        <option>15</option>
-        <option>20</option>
-        </select>
-        most recent artifact instance history entries (otherwise, a link will appear leading to a seperate page).
-        </p>
-        <p><input type="checkbox" checked="checked" />&nbsp;Show&nbsp;
-        <select class="select">
-        <option>5</option>
-        <option>10</option>
-        <option>15</option>
-        <option>20</option>
-        </select>
-        most recent artifact instance comments (otherwise, a link will appear to a seperate page).
-        </p>
+<h3>Artifact type details</h3>
+<div class="axial">
+    <table border="0" cellspacing="2" cellpadding="3">
+    <tr>
+    <th>Artifact type name</th>
+    <td><input type="text" size="25" name="$issueTypeGroup.Name.Key" value="$!issueTypeGroup.Name.Value" /></td>
+    </tr>
+    <tr>
+    <th>Artifact type descr</th>
+    <td><textarea rows="4" cols="40" name="$issueTypeGroup.Description.Key">$!issueTypeGroup.Description.Value</textarea></td>
+    </tr>
+    </table>
+</div>
+
+<h3>Artifact instance "history" and "Comments" display options</h3>
+
+<p>
+<input type="checkbox" checked="checked" />&#160;Show&#160;
+<select class="select">
+<option>5</option>
+<option>10</option>
+<option>15</option>
+<option>20</option>
+</select>
+most recent artifact instance history entries (otherwise, a link will appear leading to a seperate page).
+</p>
+<p><input type="checkbox" checked="checked" />&#160;Show&#160;
+<select class="select">
+<option>5</option>
+<option>10</option>
+<option>15</option>
+<option>20</option>
+</select>
+most recent artifact instance comments (otherwise, a link will appear to a seperate page).
+</p>
+
 #set ( $groups = $issueType.getAttributeGroups($module))
-#if ($groups.isEmpty() )
+#if ($groups.isEmpty())
    #if ($issueType.IssueTypeId)
-## NO GROUPS YET - user must push button to create default groups
-<p><strong class="alert">This module has no groups. Please click to create default groups.</strong></p>
-      <p><input type="submit" value="create default attribute groups" name="eventSubmit_doCreatedefaults" /></p>
+   ## NO GROUPS YET - user must push button to create default groups
+   <p><strong class="alert">This module has no groups. Please click to create default groups.</strong></p>
+   <p><input type="submit" value="create default attribute groups" name="eventSubmit_doCreatedefaults" /></p>
    #end
 #else
-## LIST GROUPS
-        <h3>Attribute groups</h3>
-        #set ( $maxNum = $issueType.getAttributeGroups($module).size()+1 )
-<table width="100%" border="1" cellspacing="2" cellpadding="3">
-        <tr>
-        <th nowrap="nowrap">Select</th>
-        <th>Attribute group name</th>
-        <th>Active/inactive</th>
-        <th>Sequence #</th>
-        </tr>
-  #foreach ( $group in $groups )
-## DEDUPE
-     #if ($velocityCount == ($issueType.getDedupeSequence($module)))
-         <tr>
-             <td>&nbsp;</td>
-             <td>Duplicate check</td>
-             <td>#booleanCheckbox ($moduleGroup.Dedupe)</td>
-             <td>#numericSelect( "dupe_order" 1 $maxNum $issueType.getDedupeSequence($module) 1 )</td>
-         </tr>
-    #end
-<Form method="get" action="$link.setPage("admin,ArtifactTypeEdit.vm")">
-      <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
-      <input type="hidden" name="nextTemplate" value="admin,ArtifactTypeEdit.vm" />
-    #set ( $agGroup = $intake.AttributeGroup.mapTo($group) )
-        #rows()
-        <td><input type="checkbox" name="delete_group_$group.AttributeGroupId" /></td>
-        <td><a href="$link.setPage("admin,AttributeGroup.vm").addPathInfo("groupid", $group.AttributeGroupId)">$group.Name</a></td>
-        <td>#booleanCheckbox ($agGroup.Active)</td>
-        <td>
-            #numericSelect( $agGroup.Order.Key 1 $maxNum $agGroup.Order.Value 1 )</td> </tr>
-#end
-#end
-        </td>
-        </tr>
-        </table>
 
-<div class="functnbar">
-<table cellpadding="4" cellspacing="0" border="1">
+## LIST GROUPS
+
+<h3>Attribute groups</h3>
+#set ($maxNum = $issueType.getAttributeGroups($module).size()+1)
+<table width="100%" border="1" cellspacing="2" cellpadding="3">
 <tr>
-<td class="firstchild"><div>
-Screen options
-</div>
-<input type="submit" value="Submit changes" name="eventSubmit_doModifyissuetype" />&#160;<input type="submit" value="Cancel" />
+<th nowrap="nowrap">Select</th>
+<th>Attribute group name</th>
+<th>Active/inactive</th>
+<th>Sequence #</th>
+</tr>
+
+#foreach ($group in $groups)
+## DEDUPE
+ #if ($velocityCount == ($issueType.getDedupeSequence($module)))
+ <tr>
+   <td>&#160;</td>
+   <td>Duplicate check</td>
+   <td>#booleanCheckbox ($moduleGroup.Dedupe)</td>
+   <td>#numericSelect("dupe_order" 1 $maxNum $issueType.getDedupeSequence($module) 1)</td>
+ </tr>
+ #end
+
+<form method="get" action="$link.setPage("admin,ArtifactTypeEdit.vm")">
+  <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
+  <input type="hidden" name="nextTemplate" value="admin,ArtifactTypeEdit.vm" />
+  #set ($agGroup = $intake.AttributeGroup.mapTo($group))
+  #indexedRows($velocityCount)
+  <td><input type="checkbox" name="delete_group_$group.AttributeGroupId" /></td>
+  <td><a href="$link.setPage("admin,AttributeGroup.vm").addPathInfo("groupid", $group.AttributeGroupId)">$group.Name</a></td>
+  <td>#booleanCheckbox ($agGroup.Active)</td>
+  <td>
+  #numericSelect($agGroup.Order.Key 1 $maxNum $agGroup.Order.Value 1)</td> </tr>
+#end
+
+#end
 </td>
-<td><div>
-Attribute group options
-</div>
-<input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;<input type="submit" value="Copy" />&#160;<input type="submit" value="Delete" name="eventSubmit_doDeletegroup" />&#160;<input type="submit" value="Resort" />
-</td>
-</tr></table>
+</tr>
+</table>
+
+<div class="functnbar2">
+  <table cellpadding="0" cellspacing="0" border="0">
+  <tr>
+    <td><strong>Screen options:</strong></td>
+    <td rowspan="2"><img src="$data.Request.ContextPath/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+    <td><strong>Atribute group options:</strong></td>
+    <td rowspan="2"><img src="$data.Request.ContextPath/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+  </tr>
+  <tr>
+    <td>
+      <input type="submit" value="Save" name="eventSubmit_doModifyissuetype" />&#160;
+      <!-- FIXME: <input type="submit" value="Cancel"  /> -->
+    </td>
+    <td>
+      <input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;
+      <!-- FIXME: <input type="submit" value="Copy" />&#160; -->
+      <input type="submit" value="Delete" name="eventSubmit_doDeletegroup" />&#160;
+      <!-- FIXME: <input type="submit" value="Resort" /> -->
+    </td>
+  </tr>
+  </table>
 </div>
 
 $intake.declareGroups()
