--- a/src/templates/screens/admin/ArtifactTypeSelect.vm
+++ b/src/templates/screens/admin/ArtifactTypeSelect.vm
@@ -6,6 +6,7 @@ $page.setTitle("Artifact Type Select")
 
 <form action="$link.setPage("admin,ArtifactTypeSelect.vm")" method="get">
 <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
+<input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="admin,ManageArtifactTypes.vm" />
 
 #set ($issueTypes = $scarabR.CurrentModule.AvailableIssueTypes)
 #if ($issueTypes.isEmpty())
@@ -16,7 +17,7 @@ $page.setTitle("Artifact Type Select")
     <td class="firstchild">
        <div>General functions</div>
     #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
-      <input type="submit" value="Create new" name="eventSubmit_doGotoartifactpage" />&#160;
+      <input type="submit" value="Add new" name="eventSubmit_doGotoartifactpage" />&#160;
     #end
     <input type="submit" value="Cancel" name="eventSubmit_doCancel" />
     </td>
@@ -27,7 +28,7 @@ $page.setTitle("Artifact Type Select")
     <p><strong class="alert">
     There are no more issue types to add to this module. 
     #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
-    Please click the Create New button to create a new issue type.
+    Please click the Add new button to create a new issue type.
     #end</strong>
     </p>
 
@@ -38,13 +39,13 @@ $page.setTitle("Artifact Type Select")
     <tr>
     <td class="firstchild">
     <div>Select items to:</div>
-    <input type="submit" value="Add to 'Enter issue page'" name="eventSubmit_doSelectissueType" />
+    <input type="submit" value="Add Issue Type" name="eventSubmit_doSelectissueType" />
     </td>
     
     <td>
     <div>General functions:</div>
     #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
-       <input type="submit" value="Create new" name="eventSubmit_doGotoartifactpage" />
+       <input type="submit" value="Add new" name="eventSubmit_doGotoartifactpage" />
     #end
     &#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
     </td>
@@ -78,13 +79,13 @@ $page.setTitle("Artifact Type Select")
     <tr>
     <td class="firstchild">
     <div>Select items to:</div>
-    <input type="submit" value="Add to 'Enter issue page'" name="eventSubmit_doSelectissueType" />
+    <input type="submit" value="Add Issue Type" name="eventSubmit_doSelectissueType" />
     </td>
     
     <td>
     <div>General functions:</div>
     #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
-       <input type="submit" value="Create new" name="eventSubmit_doGotoartifactpage" />
+       <input type="submit" value="Add new" name="eventSubmit_doGotoartifactpage" />
     #end
     &#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
     </td>
