--- a/src/templates/screens/admin/ArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/ArtifactTypeEdit.vm
@@ -12,30 +12,33 @@ $page.setTitle("Attribute Editor")
 
 <form method="get" action="$link.setPage("admin,ArtifactTypeEdit.vm")">
 <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
-<input type="hidden" name="nextTemplate" value="admin,ArtifactTypeEdit.vm" />
-#if ($issueTypeId)
+<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="admin,ArtifactTypeEdit.vm" />
+<input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="admin,ManageArtifactTypes.vm" />
+#if ($issueTypeId && $issueTypeId.length() > 0)
 <input type="hidden" name="issueTypeId" value="$issueTypeId" />
 #end
 
 <div class="functnbar">
-  <table cellpadding="0" cellspacing="0" border="0">
-  <tr>
-    <td><strong>Screen options:</strong></td>
-    <td rowspan="2"><img src="$data.Request.ContextPath/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-    <td><strong>Attribute group options:</strong></td>
-    <td rowspan="2"><img src="$data.Request.ContextPath/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-  </tr>
-  <tr>
-    <td>
+    <table cellpadding="4" cellspacing="0" border="1">
+    <tr>
+    <td class="firstchild">
+    <div>Screen options:</div>
+#if ($issueTypeId && $issueTypeId.length() > 0)
       <input type="submit" value="Save" name="eventSubmit_doModifyissuetype" />&#160;
-      <!-- FIXME: <input type="submit" value="Cancel"  /> -->
+#else
+      <input type="submit" value="Create" name="eventSubmit_doModifyissuetype" />&#160;
+#end
+      <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />
     </td>
-    <td>
+#if ($issueTypeId && $issueTypeId.length() > 0)
+    <td nowrap="nowrap">
+    <div>Attribute group options:</div>
       <input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;
       <!-- FIXME: <input type="submit" value="Copy" />&#160; -->
       <input type="submit" value="Delete" name="eventSubmit_doDeletegroup" />&#160;
       <!-- FIXME: <input type="submit" value="Resort" /> -->
     </td>
+#end
   </tr>
   </table>
 </div>
@@ -48,7 +51,7 @@ $page.setTitle("Attribute Editor")
     <td><input type="text" size="25" name="$issueTypeGroup.Name.Key" value="$!issueTypeGroup.Name.Value" /></td>
     </tr>
     <tr>
-    <th>Artifact type descr</th>
+    <th>Artifact type desc</th>
     <td><textarea rows="4" cols="40" name="$issueTypeGroup.Description.Key">$!issueTypeGroup.Description.Value</textarea></td>
     </tr>
     </table>
@@ -64,7 +67,8 @@ $page.setTitle("Attribute Editor")
 <option>15</option>
 <option>20</option>
 </select>
-most recent artifact instance history entries (otherwise, a link will appear leading to a seperate page).
+most recent artifact instance history entries (otherwise, a link will
+appear leading to a seperate page).
 </p>
 <p><input type="checkbox" checked="checked" />&#160;Show&#160;
 <select class="select">
@@ -73,22 +77,23 @@ most recent artifact instance history entries (otherwise, a link will appear lea
 <option>15</option>
 <option>20</option>
 </select>
-most recent artifact instance comments (otherwise, a link will appear to a seperate page).
+most recent artifact instance comments (otherwise, a link will appear to
+a seperate page).
 </p>
 
-#set ( $groups = $issueType.getAttributeGroups($module))
+#set ($groups = $issueType.getAttributeGroups($module))
 #if ($groups.isEmpty())
    #if ($issueType.IssueTypeId)
    ## NO GROUPS YET - user must push button to create default groups
    <p><strong class="alert">This module has no groups. Please click to create default groups.</strong></p>
-   <p><input type="submit" value="create default attribute groups" name="eventSubmit_doCreatedefaults" /></p>
+   <p><input type="submit" value="Create default attribute groups" name="eventSubmit_doCreatedefaults" /></p>
    #end
 #else
 
 ## LIST GROUPS
 
 <h3>Attribute groups</h3>
-#set ($maxNum = $issueType.getAttributeGroups($module).size()+1)
+#set ($maxNum = $groups.size()+1)
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
 <tr>
 <th nowrap="nowrap">Select</th>
@@ -97,14 +102,15 @@ most recent artifact instance comments (otherwise, a link will appear to a seper
 <th>Sequence #</th>
 </tr>
 
+#set ($issueDedupeSequence = $issueType.getDedupeSequence($module))
 #foreach ($group in $groups)
 ## DEDUPE
- #if ($velocityCount == ($issueType.getDedupeSequence($module)))
+ #if ($velocityCount == $issueDedupeSequence)
  <tr>
    <td>&#160;</td>
    <td>Duplicate check</td>
    <td>#booleanCheckbox ($moduleGroup.Dedupe)</td>
-   <td>#numericSelect("dupe_order" 1 $maxNum $issueType.getDedupeSequence($module) 1)</td>
+   <td>#numericSelect("dupe_order" 1 $maxNum $issueDedupeSequence 1)</td>
  </tr>
  #end
 
@@ -117,30 +123,33 @@ most recent artifact instance comments (otherwise, a link will appear to a seper
   #numericSelect($agGroup.Order.Key 1 $maxNum $agGroup.Order.Value 1)</td> </tr>
 #end
 
-#end
 </td>
 </tr>
 </table>
 
+#end
+
 <div class="functnbar2">
-  <table cellpadding="0" cellspacing="0" border="0">
-  <tr>
-    <td><strong>Screen options:</strong></td>
-    <td rowspan="2"><img src="$data.Request.ContextPath/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-    <td><strong>Attribute group options:</strong></td>
-    <td rowspan="2"><img src="$data.Request.ContextPath/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-  </tr>
-  <tr>
-    <td>
+    <table cellpadding="4" cellspacing="0" border="1">
+    <tr>
+    <td class="firstchild">
+    <div>Screen options:</div>
+#if ($issueTypeId && $issueTypeId.length() > 0)
       <input type="submit" value="Save" name="eventSubmit_doModifyissuetype" />&#160;
-      <!-- FIXME: <input type="submit" value="Cancel"  /> -->
+#else
+      <input type="submit" value="Create" name="eventSubmit_doModifyissuetype" />&#160;
+#end
+      <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />
     </td>
-    <td>
+#if ($issueTypeId && $issueTypeId.length() > 0)
+    <td nowrap="nowrap">
+    <div>Attribute group options:</div>
       <input type="submit" value="Add new" name="eventSubmit_doCreatenewgroup" />&#160;
       <!-- FIXME: <input type="submit" value="Copy" />&#160; -->
       <input type="submit" value="Delete" name="eventSubmit_doDeletegroup" />&#160;
       <!-- FIXME: <input type="submit" value="Resort" /> -->
     </td>
+#end
   </tr>
   </table>
 </div>
