--- a/src/templates/screens/admin/ArtifactTypeSelect.vm
+++ b/src/templates/screens/admin/ArtifactTypeSelect.vm
@@ -25,12 +25,28 @@ $page.setTitle("Artifact Type Select")
     </table>
 </div>
 
+<h3>Artifact Types</h3>
+
     <p><strong class="alert">
     There are no more artifact types to add to this module. 
     #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
     Please click the Create new button to create a new artifact type.
     #end</strong>
     </p>
+
+<div class="functnbar2">
+    <table cellpadding="4" cellspacing="0" border="1">
+    <tr>
+    <td class="firstchild">
+       <div>General functions</div>
+    #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
+      <input type="submit" value="Create new" name="eventSubmit_doGotoartifactpage" />&#160;
+    #end
+    <input type="submit" value="Cancel" name="eventSubmit_doCancel" />
+    </td>
+    </tr>
+    </table>
+</div>
 
 #else
 
