--- a/src/templates/screens/reports/SaveReport.vm
+++ b/src/templates/screens/reports/SaveReport.vm
@@ -1,6 +1,7 @@
 #set ( $report = $scarabR.Report )
+#set ($intakeReport = $intake.Report.mapTo($report))
 #set ($module = $scarabR.CurrentModule)
-#set ($action = "$link.setPage("Links.vm").setAction("GenerateReport")")
+#set ($action = '$link.setPage("Links.vm").setAction("GenerateReport")')
 
 $page.setTitle("Save Report")
 <div id="savereport" class="app">
