added method to AttributeValue to get the associated RModuleAttribute and then used that in the templates to display attribute names.  They are supposed to be customizible on a per module basis.
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/email/NewIssueNotification.vm
+++ b/src/templates/email/NewIssueNotification.vm
@@ -13,5 +13,5 @@ $issue.UniqueId Report
 
 #foreach ( $attKey in $attrValues.keySet().iterator() )
   #set ($attVal = $attrValues.get($attKey))
-  $attVal.Attribute.Name: $attVal.Value
+  $attVal.RModuleAttribute.DisplayValue: $attVal.Value
 #end
