--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -78,7 +78,7 @@ $page.setTitle("Enter issue")
      #if ( $attVal.isRequired() )
         *
      #end
-     $attVal.Attribute.Name
+     $attVal.RModuleAttribute.DisplayValue
    </th>
    <td>
     #if ( $attVal.Attribute.AttributeType.Name == "string" )
