--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -74,7 +74,7 @@ $page.setTitle("Enter issue")
         <tr>
             <th>
     #if ($attVal.isRequired())*#end
-    $attVal.Attribute.Name:
+    $attVal.RModuleAttribute.DisplayValue:
     #attrValueErrorMsg ($attVal $field)<br />
             </th>
             <td>
